--- a/project.yaml
+++ b/project.yaml
@@ -6,10 +6,10 @@ expectations:
 actions:
 
   generate_study_population:
-    run: cohortextractor:latest generate_cohort --study-definition study_definition
+    run: cohortextractor:latest generate_cohort --study-definition study_definition --output-format feather
     outputs:
       highly_sensitive:
-        cohort: output/input.csv
+        cohort: output/input.feather
     ## note: when running studies for real it is recommended to add the option --output-format='csv.gz' to the run command, 
     ## and add '.gz' to the output file path, to produce the output in compressed form to reduce file size.
 
