--- a/project.yaml
+++ b/project.yaml
@@ -25,3 +25,11 @@ actions:
     outputs:
       moderately_sensitive:
         cohort: output/descriptive.png
+
+  describe_table1:
+    run: r:latest analysis/table_1.R
+    needs: [generate_study_population]
+    outputs:
+      moderately_sensitive:
+        csv:  output/descriptive/tables/table*.csv
+        html: output/descriptive/tables/table*.html
